--- a/data/layout.css
+++ b/data/layout.css
@@ -13,6 +13,15 @@ body {
 	overflow: hidden;
 }
 
+#version {
+	float: right;
+}
+
+#update {
+	float: right;
+	color: blue;
+}
+
 .navbar a {
 	float: left;
 	display: block;
